Request stuff done, working on parsing JSON

--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,14 @@ repositories {
 }
 
 dependencies {
+	// Used for parsing JSON.
+	implementation 'com.google.code.gson:gson:2.10.1'
+
 	testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
+// Adds the private repository to the class list.
 sourceSets {
 	main {
 		java {
